# Trading

./: .gitignore  README.md  Readme.md  backtest.py  input.json  main.py  pyproject.toml  report_generator.py  requirements.txt  setup.py  strategy.py  test.json  utils.py
