[tool.poetry]
name = "hackaverse-backtest-platform"
version = "0.1.0"
description = ""
authors = ["UditJain2622004 <uditjain2622004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
pandas = "^2.2.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
